Trying to fix mobile image stretching

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -25,6 +25,10 @@
   margin-top: 5px;
 }
 
+.projImg{
+  max-height: 100%;
+}
+
 .resumeSec{
   color: #E65F5C;
 }
